--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
 	width:100%;
 }
 
+*{
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
 .title{
 	margin-top:7%;
 	font-size: x-large;
@@ -30,6 +38,7 @@
 	text-align: center;
 	height:10%;
 	display:block;
+	cursor: default;
 }
 
 
